[project]
name = "bprml-miniproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "catboost>=1.2.8",
    "imbalanced-learn>=0.13.0",
    "joblib>=1.5.1",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "xgboost>=3.0.3",
]
